--- a/lib/generators/imposter/install/templates/models.yml
+++ b/lib/generators/imposter/install/templates/models.yml
@@ -12,6 +12,7 @@ quantities:
 # Distribution will be logarithmic: lower foreign key ids will be used 
 #   more frequently. (TODO)
 # Feed models will not be impostered. (TODO)
+# Unique labels columns that must not have repeated values within a table.
 # More than 100 Post Comment and Tag models will be impostered, and the
 #   foreign keys that refer to these models will span the range from 1
 #   to the upper limit.
@@ -27,6 +28,8 @@ quantities:
 # distribution: log
 # skip: 
 #   - Feed
+# unique:
+#  - username
 # quantities: 
 #   Post: 1000
 #   Comment: 2000
