--- a/lib/generators/imposter/install/templates/models.yml
+++ b/lib/generators/imposter/install/templates/models.yml
@@ -1,23 +1,19 @@
 --- 
 default_quantity: 10
-choices: 
-distribution: normal
-skip: 
-quantities: 
   
 # Example for blog with User, Post, Comment, Tag, and Feed, models:
 # Tag has a taggable_id and taggable_type for polymorphic association with
 #   User and Post. Therefore, taggable_type will be a random choice of 
 #   'User' or 'Post.
 # Distribution will be logarithmic: lower foreign key ids will be used 
-#   more frequently. (TODO)
-# Feed models will not be impostered. (TODO)
+#   more frequently, integer values will tend towards 0.
+# Feed models will not be impostered.
 # Unique labels columns that must not have repeated values within a table.
 # More than 100 Post Comment and Tag models will be impostered, and the
 #   foreign keys that refer to these models will span the range from 1
 #   to the upper limit.
-# Even though Taggable is not a model class, the generator will look for 
-#   a quantity when it encounters the taggable_id column.
+# Even if Taggable is a module, not a class, the generator will look for 
+#   a quantity for 'Taggable' when it encounters the taggable_id column.
 # 
 # ---
 # default_quantity: 100
